# ch35t

./: .gitignore  Dockerfile  README.md  ch35t.py  ch35t.schema.json  ch3st.py  chest_01.json  cli.py  datahandlers.py  deserve.json  handlers.py  hint.py  label.py  m4r1m0ch35t.py  methodhandlers.py  parser.py  payload.py  pyproject.toml  requirements.txt  riddle02.json  ruff.toml  schema.md  testing_ch35t.ipynb
ch35t/: ch35t.py  cli.py  datahandlers.py  hint.py  label.py  methodhandlers.py  parser.py  payload.py  utils.py  validator.py
examples/: chest_01.json  deserve.json  deserve_aes.json  deserve_b64.json  dummy.json  riddle02.json
schema/: 1.0.0.json
tests/: validation.py
tests/bad_json/: missing_payload.json  svg.json
