[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ch35t"
version = "0.1.2"
description = "An open format for describing riddles and encrypted resources"
readme = "README.md"
authors = [
    {name = "Davide Eynard"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "click-repl==0.3.0",
    "cryptography==42.0.3",
    "jsonschema==4.20.0",
    "requests==2.31.0",
]

[project.urls]
Homepage = "https://github.com/aittalam/ch35t"

[tool.setuptools]
packages = ["ch35t"]

[project.scripts]
ch35t = "ch35t.cli:main"
