[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ch35t"
version = "0.1.9"
description = "An open format for describing riddles and encrypted resources"
readme = "README.md"
authors = [
    {name = "Davide Eynard"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "click-repl==0.3.0",
    "cryptography>=41.0.5",
    "jsonschema==4.23.0",
    "requests==2.32.4",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "build" },
  { include-group = "test" },
  { include-group = "docs" },
]

lint = [
  "pre-commit==4.2.0",
  "ruff==0.12.9",
]

build = [
  "build==1.3.0",
  "twine==6.1.0",
]

test = [
  "jupyterlab==4.4.6",
  "marimo==0.14.17",
]

docs = [
  "jsonschema2md",
]

[project.urls]
Homepage = "https://github.com/aittalam/ch35t"

[tool.setuptools]
packages = ["ch35t"]

[tool.setuptools.package-data]
ch35t = ["schema/*.json"]

[project.scripts]
ch35t = "ch35t.cli:main"

